# tombo

./: .eslintrc.json  .gitignore  .isort.cfg  .pre-commit-config.yaml  .vscodeignore  404.html  LICENSE  README.md  eslint.config.js  extra.css  index.html  mise.toml  noxfile.py  package-lock.json  package.json  pyproject.toml  requirements.txt  sitemap.xml  tsconfig.json
.devcontainer/: devcontainer.json  zshrc
.github/: CONTRIBUTING.md  INSTALL.md  SECURITY.md  SUPPORT.md  development.md  labeler.yml  release.yml
.github/workflows/: pre-commit.yml  pull-request-target.yml  pull-request.yml  reusable-sr.yml  semantic-release.yml
about/changelog/: index.html
about/license/: index.html
bundled/tool/: _debug_server.py  lsp_jsonrpc.py  lsp_runner.py  lsp_server.py  lsp_utils.py
development/api-reference/: index.html
development/architecture/: index.html
development/contributing/: index.html
docs/: mkdocs.yml  pyproject.toml
docs/docs/: index.md
docs/docs/about/: changelog.md  license.md
docs/docs/development/: api-reference.md  architecture.md  contributing.md
docs/docs/examples/: pep621.md  poetry.md  requirements.md  workflows.md
docs/docs/features/: hover-information.md  overview.md  smart-caching.md  version-completion.md
docs/docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/docs/in-action/: screenshots.md
docs/docs/troubleshooting/: common-issues.md  faq.md  performance.md
docs/ongoing/: videos.md
examples/pep621/: index.html
examples/poetry/: index.html
examples/requirements/: index.html
examples/workflows/: index.html
features/hover-information/: index.html
features/overview/: index.html
features/smart-caching/: index.html
features/version-completion/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
in-action/screenshots/: index.html
scripts/: check_extension.sh
search/: search_index.json
src/: extension.ts
src/api/: pypi-index-server.ts  pypiMetadatas.ts  sparse-index-server.ts
src/api/cache/: package-cache.ts
src/api/clients/: http-client.ts
src/api/services/: pypi-service.ts
src/api/types/: pypi.ts
src/core/: DecorationText.ts  Dependency.ts  Package.ts  constants.ts  fetcher.ts  listener.ts  python.ts  server.ts  settings.ts
src/core/config/: extension-config.ts
src/core/errors/: pypi-errors.ts
src/core/logging/: logger.ts
src/extension/: tombo-extension.ts
src/providers/: autoCompletion.ts  cursorTracker.ts  hover-provider.ts  quickAction.ts  quickFill.ts  version-completion-provider.ts
src/semver/: compareVersion.ts  semverUtils.ts
src/toml/: commands.ts  parser.ts
src/ui/: decoration.ts  decorator.ts  status-bar.ts
test/: test-poetry1-groups.toml  test-poetry2-array.toml  test-poetry2-mixed.toml  test-poetry2-multiline.toml  test-poetry2-project.toml  test-pyproject.toml  test-requirements.txt
tests/pep621/: pyproject.toml
tests/poetry_v1/: pyproject.toml
tests/poetry_v2/: pyproject.toml
troubleshooting/common-issues/: index.html
troubleshooting/faq/: index.html
troubleshooting/performance/: index.html
